force-app/main/default/objects/Marketing_Journeys__c/Marketing_Journeys__c.object-meta.xml
<CustomObject>
    <label>Marketing Journeys</label>
    <nameField>
        <displayFormat>MJ-{00000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>