force-app/main/default/objects/Marketing_Journeys__c/fields/Activar_Journey__c.field-meta.xml
<CustomField>
    <fullName>Activar_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activar Journey</label>
    <type>Checkbox</type>
</CustomField>