force-app/main/default/objects/Marketing_Journeys__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>