force-app/main/default/objects/Marketing_Journeys__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Marketing Journeys</relationshipLabel>
    <relationshipName>Marketing_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>