force-app/main/default/objects/Marketing_Journeys__c/fields/Propietario_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario Oportunidad</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>