force-app/main/default/objects/Marketing_Journeys__c/fields/Vitrina_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Vitrina_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concesionario / Vitrina</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Marketing Journeys</relationshipLabel>
    <relationshipName>Marketing_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>